# CodeCaptain

./: .dockerignore  .env.sample  .gitignore  .gitpod.yml  .prettierignore  Dockerfile  Procfile  README.md  app.config.ts  bun.lockb  docker-compose.yml  drizzle.config.ts  fly.toml  indexer.py  meta_information.py  models.py  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  pyserver.py  question.py  requirements.txt  tailwind.config.ts  test-questions.txt  tsconfig.json  vitest.config.ts
.github/workflows/: deploy.yml  tests.yml
ai/: indexer.py  meta_information.py  models.py  pyserver.py  question.py
components/: Button.vue  Card.vue  CodePanel.vue  FileTree.vue  FileTreeFolder.vue  ForgeOAuthConfig.vue  Markdown.vue  Menu.vue  MenuItem.vue  RepoExplorer.vue  RepoList.vue  TextInput.vue  file-tree-utils.test.ts  file-tree-utils.ts
components/__snapshots__/: file-tree.test.ts.snap
composables/: auth.ts  chats.store.ts  forges.store.ts  github.ts  repositories.store.ts
contrib/: build-migrate.ts  migrate.ts
db/: DbInstance.ts  index.ts
db/schemas/: index.ts  user.ts
docker/: start.sh
layouts/: auth.vue  default.vue
middleware/: auth.global.ts
pages/: chat.vue  index.vue  repos.vue  settings.vue
pages/auth/: login.vue
pages/chats/: [chat_id].vue  add.vue
pages/forges/: [forge_id].vue  add.vue
pages/repos/: [repo_id].vue  add.vue
server/contrib/: index.ts
server/forges/: github.ts  gitlab.ts  index.ts  types.ts
server/plugins/: migrate.ts
server/schemas/: index.ts  schemas.ts  user.schema.ts
stores/: forges.store.ts
(+82 files in other folders)
