[tool.poetry]
name = "codecaptain"
version = "0.1.0"
description = ""
authors = ["Geprog GmbH"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
fastapi = "^0.103.0"
langchain = "^0.0.275"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
openai = "^0.27.9"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
